//
//  Constants.swift
//  NineNewsPoint
//
//  Created by Animesh Mishra on 27/11/21.
//

import Foundation

struct Constants {
    /// Cell constants
    static let NineNewsPointCollectionViewCell = "NineNewsPointCollectionViewCell"
    static let NewsDetails = "News Details"
    
    /// Date Constants
    static let AustraliaSydney = "Australia/Sydney"
    static let LocaleAU = "en_AU"
    static let AmSymbol = "AM"
    static let PmSymbol = "PM"
    static let DateFormat = "MMM dd, hh:mm a"
    
    /// Controller Details
    static let NineNewsPointDetailsViewController = "NineNewsPointDetailsViewController"
    static let Main = "Main"
    static let NewsList = "News List"
    static let LineSpace = "\n"
    
    /// Web View Constants
    static let EstimatedProgress = "estimatedProgress"

    /// Errors
    static let ErrorTitle = "Error...!!!"
    static let ErrorMessage = "Sorry, We are not able to receive news. Please check your internet connection."
    static let ErrorOk = "OK"
    static let BlankString = ""
}
